--- a/views/index.ejs
+++ b/views/index.ejs
@@ -302,6 +302,56 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-project">
+            <div class="portfolio-wrap">
+              <img src="/images/kasir/thum.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="/images/kasir/thum.png" data-gallery="portfolioGallery" class="portfolio-lightbox">view</a>
+                <a href="/portfolio/kasir" title="More Details">detail</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-course">
+            <div class="portfolio-wrap">
+              <img src="/images/course/thum1.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="/images/course/thum1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">view</a>
+                <a href="/portfolio/basic1" title="More Details">detail</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-course">
+            <div class="portfolio-wrap">
+              <img src="/images/course/thum2.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="/images/course/thum2.png" data-gallery="portfolioGallery" class="portfolio-lightbox">view</a>
+                <a href="/portfolio/basic2" title="More Details">detail</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-course">
+            <div class="portfolio-wrap">
+              <img src="/images/course/thum3.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="/images/course/thum3.png" data-gallery="portfolioGallery" class="portfolio-lightbox">view</a>
+                <a href="/portfolio/basic3" title="More Details">detail</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-course">
+            <div class="portfolio-wrap">
+              <img src="/images/course/thum4.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="/images/course/thum4.png" data-gallery="portfolioGallery" class="portfolio-lightbox">view</a>
+                <a href="/portfolio/basic4" title="More Details">detail</a>
+              </div>
+            </div>
+          </div>
+
 
 
         </div>
