--- a/views/template.ejs
+++ b/views/template.ejs
@@ -5,15 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
     <!--========== BOX ICONS ==========-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <!-- Favicons -->
-    <link href="/images/ic.png" rel="icon">
-    <link href="/template/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!--========== CSS ==========-->
-    <link rel="stylesheet" href="<%=baseUrl%>/assets/css/styles.css">
+    <link rel="stylesheet" href="<%=baseUrl%>/assets/css/styles-pdf.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <!-- or -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -21,18 +17,9 @@
     <title>Responsive resume cv</title>
 </head>
 
-<body>
+<body class="scale-cv <%=theme%>">
     <%- include('body-cv.ejs')  %>
-    <!--========== SCROLL TOP ==========-->
-    <a href="#" class="scrolltop" id="scroll-top">
-        <i class="bx bx-up-arrow-alt scrolltop__icon"></i>
-    </a>
-
-    <!--========== HTML2PDF ==========-->
-    <script src="/assets/js/html2pdf.bundle.min.js"></script>
-
-    <!--========== MAIN JS ==========-->
-    <script src="/assets/js/main.js"></script>
+    <script src="<%=baseUrl%>/assets/js/main.js"></script>
 </body>
 
 </html>
