--- a/views/index.ejs
+++ b/views/index.ejs
@@ -282,6 +282,16 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-project">
+            <div class="portfolio-wrap">
+              <img src="/images/ssc/thum.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="/images/ssc/thum.png" data-gallery="portfolioGallery" class="portfolio-lightbox">view</a>
+                <a href="/portfolio/ssc" title="More Details">detail</a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-course">
             <div class="portfolio-wrap">
               <img src="/images/tinder/thum.png" class="img-fluid" alt="">
@@ -311,6 +321,18 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-project">
+            <div class="portfolio-wrap">
+              <img src="/images/undangan/thum.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="/images/undangan/thum.png" data-gallery="portfolioGallery" class="portfolio-lightbox">view</a>
+                <a href="/portfolio/invitation" title="More Details">detail</a>
+              </div>
+            </div>
+          </div>
+
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-course">
             <div class="portfolio-wrap">
