--- a/views/body-cv.ejs
+++ b/views/body-cv.ejs
@@ -78,7 +78,7 @@
                         <button class="whatsapp__button" onclick="copyEmail()" style="text-align: center; padding: .5rem .2rem;
                                 "><i class="bx bx-copy button__icon"></i>Copy Email</button>
                         <a href="https://wa.me/<%=data.phone%>" class="whatsapp__button" style="text-align: center; padding: .5rem .2rem;
-                                "><i class="bx bxl-whatsapp button__icon"></i> Send Whatsapp</a>
+                                "><i class="bx bxl-whatsapp button__icon"></i>Whatsapp Me</a>
                     </div>
                 </div>
 
@@ -235,7 +235,7 @@
 
             <!--========== CERTIFICATES ==========-->
             <section class="certificate section" id="certificates">
-                <h2 class="section-title-secondary">PORTOFOLIO & CERTIFICATES</h2>
+                <h2 class="section-title-secondary">PORTOFOLIO</h2>
                 <div class="certificates__container bd-grid">
                     <a class="portfolio__button" style="text-align: center; padding: .5rem .2rem"
                         href="<%=baseUrl%>/#portfolio" target="__blank">Show
