--- a/views/index.ejs
+++ b/views/index.ejs
@@ -98,7 +98,6 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 September 1998</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+6285718456591</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Karawang, Indonesia</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
@@ -131,13 +130,14 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>3+ years of experience as a Software Engineer, I excel in designing,
-            developing, and managing efficient and reliable software solutions.<br>
+          <p>3+ years of experience as a Software Engineer, I am skilled in designing, developing, and managing
+            efficient and reliable software solutions.<br>
             I possess a profound understanding of modern programming languages, software architecture, and
             best practices in application development.<br>
             I have actively contributed to high-quality, complex software development projects that meet
             client needs.<br>
-            Furthermore, I am committed to continuous learning and growth within the realm of technology.</p>
+            I can understand things quickly and am committed to continuing to learn and develop in the field of
+            technology.</p>
         </div>
 
         <div class="row">
