--- a/views/body-cv.ejs
+++ b/views/body-cv.ejs
@@ -235,11 +235,11 @@
 
             <!--========== CERTIFICATES ==========-->
             <section class="certificate section" id="certificates">
-                <h2 class="section-title-secondary">PORTOFOLIO</h2>
+                <h2 class="section-title-secondary">PORTFOLIO</h2>
                 <div class="certificates__container bd-grid">
                     <a class="portfolio__button" style="text-align: center; padding: .5rem .2rem"
                         href="<%=baseUrl%>/#portfolio" target="__blank">Show
-                        Portofolio</a>
+                        Portfolio</a>
 
                 </div>
             </section>
